--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,9 +6,14 @@
 </p>
 
 <p>
-  <strong>Status:</strong>
-  <%= @recipe.status %>
+  <% if @recipe.status != true %>
+    <strong>Cooked this recipe?:</strong>
+    <%= @recipe.cooked_or_not %> | <%= button_to "Cooked This Recipe?", :method => :post, :controller => 'recipes', :action => 'update_status', id: @recipe.id %>
+  <% else %>
+    <strong>Cooked this recipe?:</strong> <%= @recipe.cooked_or_not %> | <%= button_to "Add Comment", new_recipe_comment_path(@recipe) %>
+  <% end %>
 </p>
+  
 
 <p>
   <strong>User:</strong>
