--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,19 +6,13 @@
 </p>
 
 <p>
-  <% if @recipe.status != true %>
-    <strong>Cooked this recipe?:</strong>
-    <%= @recipe.cooked_or_not %> | <%= button_to "Cooked This Recipe?", :method => :post, :controller => 'recipes', :action => 'update_status', id: @recipe.id %>
-  <% else %>
-    <strong>Cooked this recipe?:</strong> <%= @recipe.cooked_or_not %> | <%= button_to "Add Comment", new_recipe_comment_path(@recipe) %>
-  <% end %>
+ <%= render partial: 'recipes/cooked' %>
 </p>
-  
 
 <p>
-  <strong>User:</strong>
-  <%= @recipe.user_id %>
+  <%= render partial: 'recipes/ingredients', locals: {recipe: @recipe} %>
 </p>
+  
 
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
 <%= link_to 'Back', recipes_path %>
