edit ingredient on recipe page, updates ingredient, added set_recipe method for nested resource

--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -1,6 +1,4 @@
 <h1>Editing Ingredient</h1>
 
-<%= render 'form', ingredient: @ingredient %>
+<%= render 'form', ingredient: @ingredient, recipe: @recipe %>
 
-<%= link_to 'Show', @ingredient %> |
-<%= link_to 'Back', ingredients_path %>
