--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(comment) do |f| %>
-  <% if comment.errors.any? %>
+<%= form_for ([@recipe, @comment])  do |f| %>
+  <% if @comment.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
       <ul>
-      <% comment.errors.full_messages.each do |message| %>
+      <% @comment.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -22,8 +22,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :recipe_id %>
-    <%= f.number_field :recipe_id %>
+    <%= f.hidden_field :recipe_id %>
   </div>
 
   <div class="actions">
