edit, delete work for comments. updated destroy in comments and ingredients. back link in header of application. cant edit or show ingredients that arent current users.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
 <%if user_signed_in? %>
     <%= link_to "Home", root_path %>
     <%= link_to "Recipes Home", recipes_path %>
+    <%= link_to "Back", :back %>
     <% else %>
     <%= link_to "Home", root_path %>
+    <%= link_to "Back", :back %>
     <% end %>
