added validation errors to application layout. added validations to models

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <%= content_tag(:div, flash[:error], :id => "flash_error") if flash[:error] %>
     <%= yield %>
   </body>
 </html>
