added instructions field to recipes db. changed forms and params. added partial for instuctions on show page

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -16,6 +16,10 @@
 <p>
   <%= render partial: 'recipes/comments', locals: {recipe: @recipe} %>
 </p>
+
+<p>
+  <%= render partial: 'recipes/instructions', locals: {recipe: @recipe} %>
+</p>
   
 
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
