--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :instructions %>
+    <%= f.text_area :instructions %>
+  </div>
+
+  <div class="field">
     <%= f.hidden_field :user_id %>
   </div>
 
