--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -30,7 +30,11 @@
     <%= f.hidden_field :user_id %>
   </div>
 
+  <%= render 'recipes/ingredientsfields', f: f %>
+  
+
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
