--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,4 +5,5 @@
   <%= @category.name %>
 </p>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
+<%= link_to 'Edit', edit_category_path(@category) %> | <%= link_to 'New Category', new_category_path %>
+
