rendered forms for ingredients in new recipe. working on adding categories when creating recipe

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -19,10 +19,14 @@
   <br></br>
 
   <% current_user.recipes.each do |recipe| %>
+  <%= f.fields_for :recipes do |builder| %>
   <div class="field">
-   <%=recipe.name%> <%= f.check_box :recipe_name %>
-   <%= f.hidden_field :id, :value => recipe.id %>
+
+
+    <%= recipe.name %><%= builder.check_box :id ,{}, recipe.id, "" %>
+   
   </div>
+  <% end %>
   <% end %>
 
   <div class="actions">
