--- a/app/views/recipes/_ingredientsfields.html.erb
+++ b/app/views/recipes/_ingredientsfields.html.erb
@@ -1,127 +1,5 @@
   <%= f.fields_for :ingredients do |ingredient| %>
 
-  <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-   <div>
-    <%= ingredient.label :ingredient %>
-    <%= ingredient.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%=ingredient.label :quantity %>
-    <%= ingredient.text_field :quantity %>
-  </div>
-
-
-
-
+  <%= render 'recipes/ingredients_textfield' ,ingredient: ingredient %>
 
   <% end %>
