Ingredients nested creation wasnt working. Fixed.

--- a/app/views/recipes/_categories.html.erb
+++ b/app/views/recipes/_categories.html.erb
@@ -1,5 +1,5 @@
 <% Category.all.each do |category| %>
-  <%= f.fields_for :categories do |builder| %>
+  <%= f.fields_for :recipe_categories do |builder| %>
   <div class="field">
 
 
