--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -12,13 +12,10 @@
   </thead>
 
   <tbody>
-    <% @ingredients.each do |ingredient| %>
+    <% @recipe.ingredients.each do |ingredient| %>
       <tr>
         <td><%= ingredient.name %></td>
         <td><%= ingredient.quantity %></td>
-        <td><%= link_to 'Show', ingredient %></td>
-        <td><%= link_to 'Edit', edit_ingredient_path(ingredient) %></td>
-        <td><%= link_to 'Destroy', ingredient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Ingredient', new_ingredient_path %>
+<%= link_to 'New Ingredient', new_recipe_ingredient_path %>
