--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -13,6 +13,8 @@
   <%= render 'recipes/ingredients', recipe: @recipe %>
 </p>
 
+<%= link_to "Add Another Ingredient", new_recipe_ingredient_path(@recipe) %>
+
 <p>
   <%= render 'recipes/comments', recipe: @recipe %>
 </p>
