edited ingredients new for nested resource. edited comment nested resource for recipe.

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -13,14 +13,11 @@
   </thead>
 
   <tbody>
-    <% @comments.each do |comment| %>
+    <% @recipe.comments.each do |comment| %>
       <tr>
         <td><%= comment.rating %></td>
         <td><%= comment.comments %></td>
         <td><%= comment.recipe_id %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'New Comment', new_recipe_comment_path(@recipe) %>
