completed category nested resource. create on show page recipe.

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,6 +5,13 @@
   <%= @recipe.name %>
 </p>
 
+<% @recipe.categories.map do |category| %>
+<%= category.name %>
+<br>
+<% end %>
+<%= link_to "Add New Category", new_recipe_category_path(@recipe) %>
+
+
 <p>
  <%= render 'recipes/cooked' %>
 </p>
