--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,12 +11,9 @@
   </thead>
 
   <tbody>
-    <% @categories.each do |category| %>
+    <% @recipe.categories.each do |category| %>
       <tr>
         <td><%= category.name %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +21,4 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'New Category', new_recipe_category_path %>
