--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,12 +5,9 @@
   <%= @recipe.name %>
 </p>
 
-<% @recipe.categories.map do |category| %>
-<%= category.name %>
-<br>
-<% end %>
-<%= link_to "Add New Category", new_recipe_category_path(@recipe) %>
-
+<p>
+ <%= render 'recipes/categories', recipe: @recipe %>
+</p>
 
 <p>
  <%= render 'recipes/cooked' %>
