Added field to Users to show if logged in facebook. Added origin field to my joined recipe and categories tables.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,11 @@
-<%if user_signed_in? %>
+    <% if user_signed_in? && current_user.fbook_in == true %>
+    <%= link_to "Test", root_path%>
+    
+    <%elsif user_signed_in? %>
     <%= link_to "Home", root_path %>
     <%= link_to "Recipes Home", recipes_path %>
     <%= link_to "Back", :back %>
+
     <% else %>
     <%= link_to "Home", root_path %>
     <%= link_to "Back", :back %>
