added show recipes button. began show recipes using js

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,14 +6,17 @@
   <thead>
     <tr>
     <button id="showrecipes">Show Recipes</button>
-      <th id="recipename">Name</th>
-      <th id="recipecooked">Cooked</th>
-      <th id="recipeuser">User</th>
+      <th>Name</th>
+      <th>Cooked</th>
+      <th >User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
+  <div id="recipename"></div>
+  <div id="recipecooked"></div>
+  <div id="recipeuser"></div>
     
   </tbody>
 </table>
