--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,22 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Recipes</h1>
+ <h1>Recipes</h1>
+  
+  <%= javascript_tag do %>
+  window.user_id = "<%=current_user.id.to_i%>";
+  <% end %>
 
 <table>
   <thead>
     <tr>
     <button id="showrecipes">Show Recipes</button>
       <th>Name</th>
-      <th>Cooked</th>
-      <th >User</th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
   </thead>
 
   <tbody>
-  <div id="recipename"></div>
-  <div id="recipecooked"></div>
-  <div id="recipeuser"></div>
+  <td id="recipename"></td>
+  <td id="recipecooked"></td>
+  <td id="recipeuser"></td>
     
   </tbody>
 </table>
