added click jquery function for creating recipe

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -35,7 +35,7 @@
   <%= render 'recipes/ingredientsfields', f: f %>
   
 
-  <div class="actions">
+  <div class="actions" id="createrecipe">
     <%= f.submit %>
   </div>
 <% end %>
