--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,11 +2,16 @@
     <%= link_to "Test", root_path%>
     
     <%elsif user_signed_in? %>
-    <%= link_to "Home", root_path %>
-    <%= link_to "Recipes Home", recipes_path %>
-    <%= link_to "Back", :back %>
+    <%= link_to "Home", root_path %> |
+    <%= link_to "Recipes Home", recipes_path %> |
+    <%= link_to "Back", :back %> |
+    <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+
 
     <% else %>
-    <%= link_to "Home", root_path %>
+    <%= link_to "Home", root_path %> | 
+    <%= link_to "Sign Up", new_user_registration_path %> | 
+    <%= link_to "Log In", new_user_session_path %> | 
+    <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %> | 
     <%= link_to "Back", :back %>
     <% end %>
