--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,5 @@
+<% recipe = current_user.recipes.build %>
+
 <%= form_for(recipe) do |f| %>
   <% if recipe.errors.any? %>
     <div id="error_explanation">
