--- a/app/views/recipes/index.js.erb
+++ b/app/views/recipes/index.js.erb
@@ -1,4 +1,4 @@
 
 var html = "<%= j render('recipes/recipespartial') %> "
 $("#recipename").html("")
-$("#recipename").append("<%= j render('recipes/recipespartial') %> ")
+$("#recipename").before("<%= j render('recipes/recipespartial') %> ")
