completed add ingredient link on recipe show page after recipe is created

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -16,7 +16,7 @@
   <%= render 'recipes/ingredients', recipe: @recipe %>
 </p>
 
-<%= button_to "Add Another Ingredient", new_recipe_ingredient_path(@recipe) %>
+<%= link_to "Add Another Ingredient", new_recipe_ingredient_path(@recipe) %>
 
 
 <p>
