--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for([@recipe, @ingredient]) do |f| %>
-  <% if ingredient.errors.any? %>
+  <% if @ingredient.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(ingredient.errors.count, "error") %> prohibited this ingredient from being saved:</h2>
 
