--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -29,5 +29,5 @@
 
   
 
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> 
+<%= link_to 'Edit', edit_recipe_path(@recipe) %> | <%= link_to "Delete Recipe", recipe_path(@recipe), :method => "DELETE" %>
 
