--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing Recipe</h1>
 
-<%= render 'form', recipe: @recipe %>
+<%= render 'editrecipeform', recipe: @recipe %>
 
 <%= link_to 'Show', @recipe %>
