--- a/app/views/recipes/_cooked.html.erb
+++ b/app/views/recipes/_cooked.html.erb
@@ -2,5 +2,11 @@
     <strong>Cooked this recipe?:</strong>
     <%= @recipe.cooked_or_not %> | <div id="cookedrecipe"><%= link_to "Cooked This Recipe?"%></div>
   <% else %>
-    <strong>Cooked this recipe?:</strong> <%= @recipe.cooked_or_not %> | <%= link_to "Add Comment", new_recipe_comment_path(@recipe) %>
+    <strong>Cooked this recipe?:</strong> <%= @recipe.cooked_or_not %> <div id=addcomment><%= link_to "Add Comment", new_recipe_comment_path(@recipe), :remote => true %></div>
   <% end %>
+
+  <div id="newcommentform">
+  
+  </div>
+
+  
