--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,5 @@
+<% @comment = @recipe.comments.build %>
+
 <%= form_for ([@recipe, @comment]) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
@@ -26,6 +28,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Comment" %>
   </div>
 <% end %>
