--- a/app/views/comments/new.js.erb
+++ b/app/views/comments/new.js.erb
@@ -1,3 +1,3 @@
 $("#newcommentform").html("")
-$("#newcommentform").before("<%= j render('comments/form') %> ")
+$("#newcommentform").append("<%= j render('comments/form') %> ")
 
