--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,18 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Rating:</strong>
-  <%= @comment.rating %>
-</p>
-
-<p>
-  <strong>Comments:</strong>
-  <%= @comment.comments %>
-</p>
-
-<p>
-  <strong>Recipe:</strong>
-  <%= @comment.recipe_id %>
-</p>
-
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
+<li>Rating: <%= @comment.rating %> | Comments: <%= @comment.comments %></li> 
