--- a/app/views/recipes/_comments.html.erb
+++ b/app/views/recipes/_comments.html.erb
@@ -1,3 +1,3 @@
 <% @recipe.comments.each do |comment| %>
-<li>Rating: <%= comment.rating %> | Comments: <%= comment.comments %></li>
+<li><%=comment.created_at.strftime("%B %d, %Y")%> | Rating: <%= comment.rating %> | Comments: <%= comment.comments %></li>
 <% end %>
