placeholder added to comments rating

--- a/app/views/recipes/_new_comment_form.html.erb
+++ b/app/views/recipes/_new_comment_form.html.erb
@@ -14,7 +14,7 @@
 
   <div class="field">
     <%= f.label :rating %>
-    <%= f.number_field :rating, :placeholder => "1-10" %>
+    <%= f.number_field :rating %>
   </div>
 
   <div class="field">
