--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,1 +1,1 @@
-<li><%=@comment.created_at%> | Rating: <%= @comment.rating %> | Comments: <%= @comment.comments %></li> 
+<li><%= @comment.created_at.strftime("%B %d, %Y")%> | Rating: <%= @comment.rating %> | Comments: <%= @comment.comments %></li>
