--- a/app/views/ingredients/new.js.erb
+++ b/app/views/ingredients/new.js.erb
@@ -1,3 +1,3 @@
 
 $("#extraingredients").html("")
-$("#extraingredients").before("<%= j render('ingredients/textfields') %> ")
+$("#extraingredients").before("<%= j render('ingredients/new_ingredient') %> ")
