--- a/app/views/recipes/_ingredients.html.erb
+++ b/app/views/recipes/_ingredients.html.erb
@@ -1,6 +1,10 @@
-<br></br>
-
+<div>
+<strong>Ingredients:</strong>
 <% @recipe.ingredients.each do |ingredient| %>
   Name: <%= ingredient.name %> | Quantity: <%= ingredient.quantity %> | <%= link_to "Delete Ingredient", recipe_ingredient_path(@recipe, ingredient) ,method: :delete, :confirm => "Are you sure you want to delete this ingredient" %> | <%= link_to "Edit", edit_recipe_ingredient_path(@recipe, ingredient) %>
   <br></br>
   <% end %>
+  <%= link_to "Add Another Ingredient", new_recipe_ingredient_path(@recipe), :remote => true %>
+</div>
+
+<div id="extraingredients"></div>
