organized recipes index page

--- a/app/views/recipes/_ratings.html.erb
+++ b/app/views/recipes/_ratings.html.erb
@@ -4,3 +4,5 @@
   <input type="text" name="ratings_search_value" id="ratings_search_value" placeholder="1-10">
   <input type="submit" value="Search Ratings">
 </form>
+
+<div id="ratings_search_location"></div>
