--- a/app/views/recipes/index.js.erb
+++ b/app/views/recipes/index.js.erb
@@ -1,4 +1,4 @@
 
-var html = "<%= j render('recipes/recipespartial') %> "
+var html = "<%= j render('recipes/tables') %> "
 $("#recipename").html("")
-$("#recipename").before("<%= j render('recipes/recipespartial') %> ")
+$("#recipename").before(html)
