create recipe form uses ajax on index page

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -51,9 +51,10 @@
 
 
   <div class="actions" id="createrecipe">
-    <%= f.submit %>
+    <%= f.submit "Create Recipe", 'data-disable-with' => false %>
   </div>
 <% end %>
+
 
 
 
