create recipe form is cleared after ajax post

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,7 +6,7 @@
 
   <%= link_to 'New Recipe', '#', class: 'new_recipe_link' %>
   <div id="newrecipeform">
-    <%= render partial: 'recipes/form' %>
+     <%= render partial: '/recipes/form' %>
   </div>
 
   <%= render partial: 'ratings' %>
