--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,17 +8,8 @@
   <div id="newrecipeform" class="hidden">
    <%= form_for @recipe do |f| %>
 
-    <% if @recipe.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
-
-      <ul>
-      <% @recipe.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div id="errors">
     </div>
-  <% end %>
 
   <div class="field">
     <%= f.label :name %>
